--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Flask Chatterbot Example</h1>
-    <h3>A web implementation of <a href="https://github.com/gunthercox/ChatterBot">ChatterBot</a> using Flask.</h3>
+    <h1>Yan Liang's Chatterbot</h1>
+    <h3>Yan Liang is looking for a data scientist job. If you have data scientist/data engineer oppening, please contact her by yanliang2345@outlook.com.</h3>
     <div>
       <div id="chatbox">
         <p class="botText"><span>Hi! I'm Chatterbot.</span></p>
